<resources>
    <string name="app_name">ChulkatiDotCom</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date">Select Date</string>
    <string name="enter_password">Enter Password</string>
    <string name="agree_privacy_policy"><![CDATA[Agree ? Privacy & Policy]]></string>
    <string name="signUp">Register</string>
</resources>