<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Registration">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="ChulKati.Com"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="UserName"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHighlight="#4FFFFFFF"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="220dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:background="#30ffffff"
        android:hint="PhoneNumber"
        android:maxLength="11"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHighlight="#4FFFFFFF"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="5dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/enter_your_email"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHighlight="#4FFFFFFF"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:gravity="center"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_below="@id/email"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <RadioButton
            android:id="@+id/radioMaleButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:buttonTint="@color/loginButtonBG"
            android:checked="true"
            android:text="@string/male"
            android:textColor="@color/white"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/radioFemaleButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:buttonTint="@color/loginButtonBG"
            android:text="@string/female"
            android:textColor="@color/white"
            tools:targetApi="lollipop" />

        <RadioButton
            android:id="@+id/radioOtherButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:buttonTint="@color/loginButtonBG"
            android:text="@string/other"
            android:textColor="@color/white"
            tools:targetApi="lollipop" />

    </RadioGroup>

    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="160dp"
        android:layout_height="47dp"
        android:layout_below="@id/genderGroup"
        android:layout_marginStart="15dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="128dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="20dp"
        android:hint="@string/date_of_birth"
        android:textColor="@color/white"
        android:textColorHighlight="#4FFFFFFF"
        android:textColorHint="@color/white"
        />

    <Button
        android:id="@+id/select_dob"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_below="@id/genderGroup"
        android:layout_marginStart="200dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/select_date"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/date_of_birth"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_of_birth"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/enter_password"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHighlight="#4FFFFFFF"
        android:textColorHint="@color/white"
        />

    <CheckBox
        android:id="@+id/policy"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="145dp"
        android:layout_below="@id/password"
        android:buttonTint="@color/loginButtonBG"
        android:text="@string/agree_privacy_policy"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButtonId"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/policy"
        android:background="@color/purple_700"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="#FFFFFF"
        android:layout_marginStart="150dp"
        />

</RelativeLayout>
